<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_design_bg_02"
    tools:context="com.example.android.quizapp2.QuizActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/nameText_header"
        android:text="@string/nameText_header" />


    <TextView
        android:id="@+id/count_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:paddingTop="20dp"
        android:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/count_score"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="Score:" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_1"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_1"
                style="@style/questionsStyle"
                android:text="@string/q1" />

            <CheckBox
                android:id="@+id/checkBox_1"
                style="@style/checkBox"
                android:text="@string/q1_ans1" />

            <CheckBox
                android:id="@+id/checkBox_2"
                style="@style/checkBox"
                android:text="@string/q1_ans2" />

            <CheckBox
                android:id="@+id/checkBox_3"
                style="@style/checkBox"
                android:text="@string/q1_ans3" />

            <CheckBox
                android:id="@+id/checkBox_4"
                style="@style/checkBox"
                android:text="@string/q1_ans4" />

            <CheckBox
                android:id="@+id/checkBox_5"
                style="@style/checkBox"
                android:text="@string/q1_ans5" />

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    android:visibility="invisible"
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_2"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_2"
                style="@style/questionsStyle"
                android:text="@string/q2" />

            <CheckBox
                android:id="@+id/q2_ans1"
                style="@style/checkBox"
                android:text="@string/q2_ans1" />

            <CheckBox
                android:id="@+id/q2_ans2"
                style="@style/checkBox"
                android:text="@string/q2_ans2" />

            <CheckBox
                android:id="@+id/q2_ans3"
                style="@style/checkBox"
                android:text="@string/q2_ans3" />

            <CheckBox
                android:id="@+id/q2_ans4"
                style="@style/checkBox"
                android:text="@string/q2_ans4" />

            <CheckBox
                android:id="@+id/q2_ans5"
                style="@style/checkBox"
                android:text="@string/q2_ans5" />


            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_3"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_3"
                style="@style/questionsStyle"
                android:text="@string/q3" />

            <RadioGroup
                style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/q3_ans_1"
                    style="@style/radioButtons"
                    android:text="@string/q3_ans1" />

                <RadioButton
                    android:id="@+id/q3_ans_2"
                    style="@style/radioButtons"
                    android:text="@string/q3_ans2" />

                <RadioButton
                    android:id="@+id/q3_ans_3"
                    style="@style/radioButtons"
                    android:text="@string/q3_ans3" />

            </RadioGroup>

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_4"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_4"
                style="@style/questionsStyle"
                android:text="@string/q4" />


            <ImageView
                android:id="@+id/image_q4"
                style="@style/imageQuestion4"
                android:src="@drawable/color_quiz_splash_01"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editText_q4"
                style="@style/editText"
                android:hint="@string/editText_hint" />

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    android:id="@+id/button_next"
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_5"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_5"
                style="@style/questionsStyle"
                android:text="@string/q5" />


            <EditText
                android:id="@+id/editText_q5"
                style="@style/editText"
                android:hint="@string/editText_hint" />

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_6"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_6"
                style="@style/questionsStyle"
                android:text="@string/q6" />

            <LinearLayout
                style="@style/linearLayout_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q6_ans1"
                        style="@style/checkBox"
                        android:text="@string/q6_ans1" />

                    <CheckBox
                        android:id="@+id/q6_ans2"
                        style="@style/checkBox"
                        android:text="@string/q6_ans2" />

                    <CheckBox
                        android:id="@+id/q6_ans3"
                        style="@style/checkBox"
                        android:text="@string/q6_ans3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q6_ans4"
                        style="@style/checkBox"
                        android:text="@string/q6_ans4" />

                    <CheckBox
                        android:id="@+id/q6_ans5"
                        style="@style/checkBox"
                        android:text="@string/q6_ans5" />

                    <CheckBox
                        android:id="@+id/q6_ans6"
                        style="@style/checkBox"
                        android:text="@string/q6_ans6" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_7"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_7"
                style="@style/questionsStyle"
                android:text="@string/q7" />

            <RadioGroup
                style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/q7_ans_1"
                    style="@style/radioButtons"
                    android:text="@string/q7_ans1" />

                <RadioButton
                    android:id="@+id/q7_ans_2"
                    style="@style/radioButtons"
                    android:text="@string/q7_ans2" />

                <RadioButton
                    android:id="@+id/q7_ans_3"
                    style="@style/radioButtons"
                    android:text="@string/q7_ans3" />

            </RadioGroup>

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_8"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_8"
                style="@style/questionsStyle"
                android:text="@string/q8" />

            <LinearLayout
                style="@style/linearLayout_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q8_ans1"
                        style="@style/checkBox"
                        android:text="@string/q8_ans1" />

                    <CheckBox
                        android:id="@+id/q8_ans2"
                        style="@style/checkBox"
                        android:text="@string/q8_ans2" />

                    <CheckBox
                        android:id="@+id/q8_ans3"
                        style="@style/checkBox"
                        android:text="@string/q8_ans3" />

                    <CheckBox
                        android:id="@+id/q8_ans4"
                        style="@style/checkBox"
                        android:text="@string/q8_ans4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q8_ans5"
                        style="@style/checkBox"
                        android:text="@string/q8_ans5" />

                    <CheckBox
                        android:id="@+id/q8_ans6"
                        style="@style/checkBox"
                        android:text="@string/q8_ans6" />

                    <CheckBox
                        android:id="@+id/q8_ans7"
                        style="@style/checkBox"
                        android:text="@string/q8_ans7" />

                    <CheckBox
                        android:id="@+id/q8_ans8"
                        style="@style/checkBox"
                        android:text="@string/q8_ans8" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonNext"
                    android:text="@string/button_next" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_9"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question_9"
                style="@style/questionsStyle"
                android:text="@string/q9" />

            <RadioGroup
                style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/q9_ans_1"
                    style="@style/radioButtons"
                    android:text="@string/q9_ans1" />

                <RadioButton
                    android:id="@+id/q9_ans_2"
                    style="@style/radioButtons"
                    android:text="@string/q9_ans2" />

                <RadioButton
                    android:id="@+id/q9_ans_3"
                    style="@style/radioButtons"
                    android:text="@string/q9_ans3" />

            </RadioGroup>

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="buttonBack"
                    android:text="@string/button_back" />

                <Button
                    android:id="@+id/button_submit"
                    style="@style/ButtonStyle"
                    android:onClick="buttonSubmit"
                    android:text="@string/button_submit" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView_last"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/score_text"
                style="@style/resultText"
                android:text="@string/results_text" />

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/coffee_gallery_1" />

            <LinearLayout style="@style/buttons_LinearLayout">

                <Button
                    android:id="@+id/button_restart"
                    style="@style/ButtonStyle"
                    android:onClick="buttonRestart"
                    android:text="@string/button_restart" />

                <Button
                    android:id="@+id/button_share"
                    style="@style/ButtonStyle"
                    android:onClick="buttonShare"
                    android:text="@string/button_share" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
