<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.android.quizapp2.StartActivity">

    <ImageView
        android:contentDescription="@string/starting_image"
        android:id="@+id/quiz_image"
        style="@style/startingImage"
        android:src="@drawable/color_quiz_screen_07"/>

    <EditText
        android:id="@+id/user_name"
        style="@style/yourName_edit"
        android:hint="@string/nameText_header" />


    <Button
        android:id="@+id/start_quiz"
        style="@style/StartButton"
        android:text="@string/button_start"
        android:onClick="Start" />

</RelativeLayout>
